# glean-indexing-sdk

./: .cz.toml  .env.template  .gitignore  .markdown-coderc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_REVIEW.md  OBSERVABILITY_IMPLEMENTATION_PLAN.md  PR2_DESCRIPTION.md  PR_DESCRIPTION.md  README.md  RELEASE.md  REPOSITORY_STRUCTURE.md  env.template  mise.toml  package-lock.json  package.json  pluginpack.config.ts  pyproject.toml  taskfile.yml
.claude/commands/: release.md
.cursor/: mcp.json
.cursor/rules/: connector-ai-builder.mdc
.github/workflows/: ci.yml  publish.yml
.glean/: api_endpoints.json  connector_plan.md  source_docs.json  source_investigation.md
.webex/state/: last_activity_cursor.json
docs/: advanced.md  ai-layer-workstream.md  architecture.md  connector-ai-workflow.md  status-endpoint-workstream.md  streaming-connectors.md  worker.md
docs/templates/: api_endpoints.schema.json  connector_plan.md  source_docs.schema.json  source_investigation.md
examples/: README.md  datasource_example.py  people_example.py
examples/containers/docker/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/containers/docker/src/connector/: __init__.py  main.py  sample_connector.py
examples/containers/kubernetes/: Dockerfile  README.md
examples/serverless/aws_lambda/: README.md  pyproject.toml  template.yaml
examples/serverless/aws_lambda/src/lambda_handler/: __init__.py  connector.py  handler.py
examples/serverless/cloudflare_workers/: README.md  package.json  wrangler.toml
examples/simple/wiki_connector/: .env.example  README.md  pyproject.toml
examples/simple/wiki_connector/src/wiki_connector/: __init__.py  connector.py  data_client.py  main.py  models.py
examples/temporal/: README.md
examples/temporal/basic_workflow/: .env.example  README.md  pyproject.toml
examples/temporal/basic_workflow/src/basic_workflow/: __init__.py  activities.py  connector.py  starter.py  worker.py  workflow.py
examples/temporal/scheduled_workflow/: README.md  pyproject.toml
recipes/observability/: __init__.py  cloud_providers_aws.py  cloud_providers_gcp.py  decorators.py  lifecycle_events.py  logging_setup.py  metrics_providers.py  metrics_recording.py  performance_tracking.py
recipes/pull/: __init__.py  data_client.py  http_client.py  options.py  response.py
scripts/connector_builder/: __init__.py  connector_builder.py
skills/connector-api-exploration/: SKILL.md
skills/connector-auth/: SKILL.md
skills/connector-builder/: SKILL.md
skills/connector-builder/evals/: README.md  evals.json  rubric.md  (+1 more)
skills/connector-deployment/: SKILL.md
skills/connector-observability/: SKILL.md
skills/connector-pull/: SKILL.md
skills/connector-push/: SKILL.md
snippets/async_streaming/: event_connector.py  event_data.py  event_data_client.py  run_connector.py
snippets/streaming/: article_connector.py
snippets/webex/: .env.example  __init__.py  checkpoint.py  client.py  connector.py  data_client.py  models.py  run_connector.py  sample.env  urls.py  webex_connector.py  webex_data.py  webex_data_client.py
tests/integration_tests/: test_examples.py
tests/unit_tests/: test_async_streaming.py  test_base_data_client.py  test_base_datasource_connector.py  test_base_people_connector.py  test_base_streaming_datasource_connector.py  test_connectors.py  test_custom_connector_integration.py  test_exceptions.py  test_pull_layer.py  test_pull_push_integration.py  test_push_layer.py  test_webex_snippet.py
(+158 files in other folders)
