[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "glean-connector-sdk"
version = "0.0.1"
description = "SDK for building custom Glean connectors (datasource & people)"
authors = [
    { name = "Glean", email = "dev@glean.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"
packages = [{ include = "glean.*" }]
dependencies = [
    "glean-sdk>=0.1.0",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "commitizen>=4.4.1",
]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "python-dotenv>=1.1.0",
    "pytest-socket>=0.7.0",
    "pytest-watcher>=0.3.4",
]
codespell = [
    "codespell>=2.2.6",
]
test_integration = []
lint = [
    "ruff>=0.5",
]
typing = [
    "mypy>=1.10",
    "types-requests>=2.31.0.1",
]

[project.urls]
"Source Code" = "https://github.com/glean-io/glean-connector-sdk"

[tool.mypy]
disallow_untyped_defs = "True"
exclude = ["docs/", "tests/"]

[tool.ruff]
line-length = 160
exclude = ["docs/"]

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"
pythonpath = ["src"] 