[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "wiki-connector-example"
version = "0.1.0"
description = "Simple example connector for the Glean Indexing SDK"
requires-python = ">=3.10,<4.0"
dependencies = [
    "glean-indexing-sdk>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wiki_connector"]
